--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "^0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
